tests/machine/x/pl/pure_global_fold.error
run: exit status 2
ERROR: /workspace/mochi/tests/machine/x/pl/pure_global_fold.pl:5: user:main is/2: Arguments are not sufficiently instantiated

